# Todo_list

./: .gitignore  README.md  Todo list.exe - 快捷方式.lnk  pyproject.toml  question.md  requirements.txt
docs/superpowers/plans/: 2026-05-12-floating-todo-ui-upgrade.md  2026-05-12-windows-floating-todo.md
docs/superpowers/specs/: 2026-05-12-floating-todo-design.md  2026-05-12-floating-todo-ui-upgrade.md
scripts/: build.ps1
src/floating_todo/: __main__.py  app.py  app_fonts.py  app_identity.py  app_resources.py  domain.py  notifications.py  platform_windows.py  reminders.py  settings.py  store.py  theme.py  view_models.py
src/floating_todo/ui/: __init__.py  backdrop.py  completion_dialog.py  confirmation_dialog.py  controls.py  date_controls.py  dialog_chrome.py  effects.py  history_graph.py  history_window.py  main_window.py  settings_window.py  task_dialog.py  toast.py  tray.py
tests/: conftest.py  test_app_bootstrap.py  test_app_resources.py  test_build_script.py  test_domain.py  test_history_workspace.py  test_imports.py  test_main_window.py  test_notifications.py  test_reminders.py  test_settings_platform.py  test_settings_window.py  test_store.py  test_task_dialog.py  test_tray.py  test_ui_upgrade.py  test_view_models.py
