[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "floating-todo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "winotify>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
